fixed icon alignment in offerings

--- a/app/public/css/pages.styl
+++ b/app/public/css/pages.styl
@@ -146,6 +146,9 @@ Page styles are specific to certain areas of the site. For instance if you want 
 	margin 5px 0 3px 0
 #inventory .service .icon
 	width 100%
+	height 125px
+	text-align center
+	line-height 105px
 	cursor pointer
 
 // specific to all-services
@@ -171,8 +174,6 @@ Page styles are specific to certain areas of the site. For instance if you want 
 	text-align left
 #inventory #our-services .service .avail
 	text-align right
-#inventory #our-services .service img
-	margin-left 40px
 #inventory #our-services .services
 	overflow hidden
 	padding-top 18px
